# zenpost-studio

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GedankenPost.md  Install_MacOS.md  LAUNCH_POST.md  LICENSE  LOGO_MANAGEMENT.md  README.md  RELEASE.md  RELEASE_UPDATE.md  SECURITY.md  VISION.md  ZenPost-Cloud-Architecture.md  devlog-tag02-bilder-crash.md  index.html  mein-skript.js  og_image_template.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  test-code-example.ts  test-scan.cjs  vite.config.ts
.claude/: settings.json
.github/: FUNDING.yml  release.yml
data-room/: INDEX.md  QUICK_START_GUIDE.md  README.md
docs/: ARCHITECTURE.md  DATA_ROOM.md  DEPLOYMENT.md  EXIT_STRATEGY.md  EXPORT_QA_CHECKLIST.md  EXPORT_QA_RESULTS_BASELINE_2026-02-16.md  EXPORT_QA_RESULTS_TEMPLATE.md  METADATA_REPLACEMENT.md  PROJECT_DOCUMENTATION.md  README.md  SOCIAL_MEDIA_API_INTEGRATION.md  _404.md  _sidebar.md  getting-started.md  index.html  installation.md  (+3 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cpp/: zen_engine.cpp  zen_engine.h
src-tauri/cpp/zen_engine_v2/: analyzer.cpp  analyzer.h  autocorrect.cpp  autocorrect.h  output.cpp  output.h  parallel.cpp  parallel.h  rule_index.cpp  rule_index.h  rule_loader.cpp  rule_loader.h  types.h  zen_engine_v2.cpp  zen_engine_v2.h  zen_engine_v2_c.cpp  zen_engine_v2_c.h  zen_engine_v2_cli.cpp
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/engine/: image_proc.rs  markdown.rs  mod.rs  rules.rs
(+528 files in other folders)
